system-messages new logic

--- a/src/app/chat/components/brief-message-showing/brief-message-showing.component.scss
+++ b/src/app/chat/components/brief-message-showing/brief-message-showing.component.scss
@@ -208,6 +208,9 @@
   }
   .brief-decisions-options{
     margin: 20px 0 10px;
+    button{
+      font-size: 12px;
+    }
   }
   .brief {
     .time{
