--- a/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.scss
+++ b/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.scss
@@ -240,5 +240,11 @@
             height: 20px
         }
     }
+    .actions{
+      button{
+        padding: 9px 12px;
+        font-size: 12px;
+      }
+    }
   }
 }
