--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -535,6 +535,9 @@ form::ng-deep {
     // ---------------------------file upload form ---------------------------
   .items {
     justify-content: flex-start;
+    .img-item{
+      margin-right: auto;
+    }
   }
   .form-butons {
     button {
