--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
@@ -267,6 +267,11 @@
     .save-all{
       margin: 20px auto 20px;
     }
+    app-location-language-user-settings{
+      .field-block-multiple{
+        max-width: 100%;
+      } 
+    }
   }
 }
 
