--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,3 +1,69 @@
 h1 {
   text-align: center;
 }
+div{
+  font-family: "Source Sans Pro", sans-serif;
+  font-style: normal;
+}
+::ng-deep .wrapper{
+  width: 100%;
+  max-width: 1495px;
+  margin: 0 auto;
+}
+.search{
+  background-color: #F6FAFF;
+
+  width: 100%;
+  height: 810px;
+  position: relative;
+  overflow: hidden;
+  background-image: url(/assets/images/images/pseudo-elements3.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  &::after{
+    content: "";
+    position: absolute;
+    background-image: url(/assets/images/images/pseudo-elements.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 35%;
+    height: 45%;
+    top: 10%;
+    left: 0%;
+    z-index: 9;
+  }
+  &::before{
+    content: "";
+    position: absolute;
+    background-image: url(/assets/images/images/pseudo-elements2.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 35%;
+    height: 45%;
+    top: -20%;
+    right: -5%;
+    z-index: 9;
+  }
+}
+
+.advantages{
+  background-color: #F6FAFF;
+  position: relative;
+  .arrows{
+    width: 100%;
+    height: 430px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .arrow{
+      position: absolute;
+      width: 100%;
+    }
+  }
+}
+
+
