home page advantages

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -12,5 +12,7 @@
     </div>
     <app-home-page-advantages></app-home-page-advantages>
 </section>
-
+<section class="how-work">
+    <app-home-page-how-work></app-home-page-how-work>
+</section>
 
