--- a/src/app/home-page/home-page-advantages/home-page-advantages.component.html
+++ b/src/app/home-page/home-page-advantages/home-page-advantages.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
     <div class="main-info">
         <div class="main-info__wrap">
-            <h3 class="main-info__subtitle">преимущества</h3>
-            <h2 class="main-info__title">Почему Gigrum?</h2>
+            <h3 class="section__subtitle">преимущества</h3>
+            <h2 class="section__title">Почему Gigrum?</h2>
             <p class="main-info__text">
                 Добро пожаловать в сообщество веб-разработчиков, дизайнеров, создателей текстового, графического и видео контента, переводчиков и мастеров озвучки.
             </p>
