--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,14 +1,32 @@
 h1 {
   text-align: center;
 }
-div{
-  font-family: "Source Sans Pro", sans-serif;
-  font-style: normal;
-}
-::ng-deep .wrapper{
-  width: 100%;
-  max-width: 1495px;
-  margin: 0 auto;
+
+::ng-deep {
+  div{
+    font-family: "Source Sans Pro", sans-serif;
+    font-style: normal;
+  }
+  .wrapper{
+    width: 100%;
+    max-width: 1495px;
+    margin: 0 auto;
+  }
+  .section__subtitle{
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    color: #36B37E;
+    margin: 0 0 16px;
+  }
+  .section__title{
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 45px;
+    margin: 0 0 26px;
+  }
 }
 .search{
   background-color: #F6FAFF;
@@ -52,6 +70,7 @@ div{
 .advantages{
   background-color: #F6FAFF;
   position: relative;
+  height: 50%;
   .arrows{
     width: 100%;
     height: 430px;
@@ -66,4 +85,7 @@ div{
   }
 }
 
+.how-work{
+  padding: 150px 0 50px;
+}
 
