--- a/src/app/dashboard-page/dashboard-pages/finace-page/components/admin-finances/admin-finances.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/components/admin-finances/admin-finances.component.html
@@ -1,4 +1,4 @@
-<div class="admin statistic" *ngIf="userFinance">
+<!-- <div class="admin statistic" *ngIf="userFinance">
   <section class="compressed-statistic" >
     <div *ngFor="let el of allStatisticInfo">
       <div class="icon">
@@ -16,4 +16,4 @@
   <section>
     
   </section>
-</div>
+</div> -->
