--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -31,8 +31,8 @@
         <ng-container *ngFor="let el of dashboardMenu">
           <a class="{{el.class}}"
             *ngIf="user.role_id === 1 && el.class !== 'catalog' && el.class !== 'arbitr' || 
-            user.role_id === 2 && el.class !== 'dashboard' && 
-            el.class !== 'services' && el.class !== 'dashboard' && el.class !== 'arbitr' ||
+            user.role_id === 2 && 
+            el.class !== 'services' && el.class !== 'arbitr' ||
             (user.role_id === 42 && el.class !== 'services' && el.class !== 'settings' && el.class !== 'projects')
             "
             [routerLink]="el.link | localize" [routerLinkActive]="'active'" (click)="openChat(el.class)"
