--- a/src/app/home-page/home-page-advantages/home-page-advantages.component.scss
+++ b/src/app/home-page/home-page-advantages/home-page-advantages.component.scss
@@ -14,26 +14,26 @@
     align-items: center;
     color: #323C47;
     &__text{
-        font-size: 16px;
-        line-height: 23px;
+        font-size: 24px;
+        line-height: 33px;
         letter-spacing: 0.5px;
         margin: 0;
 
-        max-width: 350px;
+        max-width: 510px;
     }
     &__wrap{
-        padding: 67px 0;
+        padding: 110px 0;
         position: relative;
         &::before{
             content: "";
             position: absolute;
             z-index: -1;
-            top: 45%;
+            top: 55%;
             left: 43%;
-            width: 125%;
-            height: 125%;
-            max-width: 430px;
-            max-height: 430px;
+            width: 115%;
+            height: 115%;
+            max-width: 580px;
+            max-height: 580px;
             background: linear-gradient(37.4deg, #F0F7FF 13.12%, #FFFFFF 89.5%);
             box-shadow: 0px 0px 40px rgba(128, 152, 213, 0.2);
             border-radius: 97px;
@@ -65,7 +65,7 @@
     color: #323C47;   
     &-column{
         height: 100%;
-        margin: 0 15px;
+        margin: 0 35px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -80,10 +80,10 @@
         content: "";
         position: absolute;
         z-index: -1;
-        top: -10px;
-        right: -8px;    
-        width: 230px;
-        height: 230px;
+        top: 0px;
+        right: -14px;
+        width: 280px;
+        height: 280px;
         background: #3C7EEA;
         box-shadow: 0px 0px 40px rgba(128, 152, 213, 0.2);
         border-radius: 42px;
@@ -111,28 +111,30 @@
 }
 
 .features-item{
-    padding: 25px 30px 25px 28px;
+    padding: 40px 30px;
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(128, 152, 213, 0.2);
     border-radius: 16px;
 
-    width: 230px;
-    height: auto;
-    max-height: 210px;
-    margin: 14px 0;
+    width: 300px;
+    height: 260px;
+    margin: 35px 0;
 
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     transition: all .5s;
     &__top{
         display: flex;
         align-items: center;
         width: 100%;
-        margin: 0 0 13px;
+        margin: 0 0 25px;
     }
     &__icon{
         width: 40px;
         height: 40px;
-        margin-right: 15px;
+        margin-right: 22px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -142,16 +144,15 @@
         }
     }
     &__title{
-        font-size: 16px;
-        line-height: 20px;
+        font-size: 22px;
+        line-height: 28px;
         letter-spacing: -0.016em;
         margin: 0;
         white-space: nowrap;
     }
     &__text{
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 18px;
+        font-size: 18px;
+        line-height: 24px;
         color: #707683;
         margin: 0;
     }
