--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -15,4 +15,14 @@
 <section class="how-work">
     <app-home-page-how-work></app-home-page-how-work>
 </section>
+<section class="find-specialist">
+    <div class="arrows">
+        <img class="arrow" src="assets/images/home-page/find-specialiset-line.svg" alt="">
+        <img class="arrow" src="assets/images/home-page/find-specialiset-line.svg" alt="">
+    </div>
+    <app-home-page-find-specialist></app-home-page-find-specialist>
+</section>
 
+<section class="question">
+    <app-home-page-questions></app-home-page-questions>
+</section>
