--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -14,18 +14,19 @@ h1 {
   }
   .section__subtitle{
     font-weight: 600;
-    font-size: 12px;
-    line-height: 15px;
+    font-size: 16px;
+line-height: 20px;
     letter-spacing: 0.5px;
     text-transform: uppercase;
     color: #36B37E;
-    margin: 0 0 16px;
+    margin: 0 0 20px;
   }
   .section__title{
     font-weight: bold;
-    font-size: 36px;
-    line-height: 45px;
-    margin: 0 0 26px;
+    font-size: 48px;
+    line-height: 60px;
+    margin: 0 0 55px;
+    color: #323C47;
   }
 }
 .search{
@@ -70,7 +71,7 @@ h1 {
 .advantages{
   background-color: #F6FAFF;
   position: relative;
-  height: 50%;
+  height: 80%;
   .arrows{
     width: 100%;
     height: 430px;
@@ -87,5 +88,28 @@ h1 {
 
 .how-work{
   padding: 150px 0 50px;
+}
+
+.find-specialist{
+  background-image: url(/assets/images/images/home-page/find-specialist-bg.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  position: relative;
+  .arrows{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .arrow{
+      position: absolute;
+      width: 100%;
+      &:first-child{
+        top: -50px;
+      }
+    }
+  }
 }
 
