home-page-questions

--- a/src/app/home-page/home-page-how-work/home-page-how-work.component.html
+++ b/src/app/home-page/home-page-how-work/home-page-how-work.component.html
@@ -39,7 +39,7 @@
                 <div class="step-number">2</div>
                 <div class="flip-container" [ngClass]="{customer: activeTab === 0, freelancer: activeTab === 1}"ontouchstart="this.classList.toggle('hover');">
                     <div class="flipper">
-                        <div class="step-img-wrap front"><img src="assets/images/images/step2.svg" alt=""></div>
+                        <div class="step-img-wrap front"><img src="assets/images/images/step2.1.svg" alt=""></div>
                         <div class="step-img-wrap back"><img src="assets/images/images/step2.svg" alt=""></div>
                     </div>
                 </div> 
@@ -50,7 +50,7 @@
                 <div class="step-number">3</div>
                 <div class="flip-container" [ngClass]="{customer: activeTab === 0, freelancer: activeTab === 1}"ontouchstart="this.classList.toggle('hover');">
                     <div class="flipper">
-                        <div class="step-img-wrap front"><img src="assets/images/images/step3.svg" alt=""></div>
+                        <div class="step-img-wrap front"><img src="assets/images/images/step3.1.svg" alt=""></div>
                         <div class="step-img-wrap back"><img src="assets/images/images/step3.svg" alt=""></div>
                     </div>
                 </div> 
@@ -61,7 +61,7 @@
                 <div class="step-number">4</div>
                 <div class="flip-container" [ngClass]="{customer: activeTab === 0, freelancer: activeTab === 1}"ontouchstart="this.classList.toggle('hover');">
                     <div class="flipper">
-                        <div class="step-img-wrap front"><img src="assets/images/images/step4.svg" alt=""></div>
+                        <div class="step-img-wrap front"><img src="assets/images/images/step4.1.svg" alt=""></div>
                         <div class="step-img-wrap back"><img src="assets/images/images/step4.svg" alt=""></div>
                     </div>
                 </div> 
