--- a/src/app/home-page/home-page-questions/home-page-questions.component.scss
+++ b/src/app/home-page/home-page-questions/home-page-questions.component.scss
@@ -1,3 +1,91 @@
+.wrapper{
+  display: flex;
+}
+.main-info{
+  width: 50%;
+  &__text{
+    font-size: 24px;
+    line-height: 33px;
+    color: #707683;
+    margin-bottom: 45px;
+    p{
+      margin-bottom: 33px;
+      &:first-child{
+        max-width: 400px;
+      }
+      &:last-child{
+        max-width: 450px;
+      }
+    }
+  }
+  .btn{
+    width: fit-content;
+  }
+}
+.guestion-tabs{
+  width: 50%;
+  min-height: 700px;
+  .tabs{
+    color: #323C47;
+    max-width: 100%;
+    &-list{
+        max-width: 500px;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 4px;
+        .tab{
+            font-weight: 600;
+            font-size: 24px;
+            line-height: 30px;
+            margin-bottom: 10px;
+            letter-spacing: 0.2px;
+            cursor: pointer;
+            transition: all .4s;
+            &.active{
+                color: #3C7EEA;
+            }
+        }
+    }
+    &-slider{
+       width: 100%;
+       height: 5px;
+       border-bottom: 1px solid #3C7EEA;
+       .indicator{
+            position: relative;
+            bottom: -1px;
+            width: 200px;
+            max-width: 100%;
+            margin: 0;
+            height: 4px;
+            background: #428BFF;
+            border-radius: 1px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            transition: all 0.33s cubic-bezier(0.38, 0.8, 0.32, 1.07);
+            &.activeOne{
+                transform: translateX(0); 
+            }
+            &.activeTwo{
+                transform: translateX(calc(500px - 95%));
+            }
+       }
+    }
+    .tabs-text{
+        p{
+            font-size: 24px;
+            line-height: 33px;
+            letter-spacing: 0.5px;
+            margin: 0 0 22px;
+        }
+    }
+}
+
+}
+
+.question-wrap{
+  box-shadow: 0px 10px 40px rgba(128, 152, 213, 0.5);
+}
+
 .question-list {
     width: auto;
     margin: 0 auto;
@@ -5,102 +93,111 @@
     border-radius: 6px;
     overflow: hidden;
   }
-  .question-item {
-    width: 100%;
-    border-bottom: 1px solid #EBEEFF;
-    background-color: #F4F7FC;
-    &__title {
-      position: relative;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 23px;
-      color: #4E5051;
-      margin: 0;
-      cursor: pointer;
-      padding: 7px 20px 9px;
-      .element-plus{
-        color: #3a4046;
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translateY(-50%);
-        width: 25px;
-        height: 25px;
-        cursor: pointer;
-        &::after {
-          content: "";
-          width: 12px;
-          height: 1px;
-          background-color: #3a4046;
-          transform: translate(-50%, -50%);
-          top: 50%;
-          left: 50%;
-          position: absolute;
-        }
-        &::before {
-          content: "";
-          width: 12px;
-          height: 1px;
-          background-color: #3a4046;
-          transform: translate(-50%, -50%) rotate(90deg);
-          top: 50%;
-          left: 50%;
-          position: absolute;
-          transition: all .2s;
-        }
-      }
-    }
-    &__text {
-      font-weight: normal;
-      font-size: 18px;
-      line-height: 23px;
-      color: #4E5051;
-      margin: 0;
-      font-family: "Source Sans Pro", sans-serif;
-      // padding: 0 100px 0 20px;
-      overflow: hidden;
-      // transition: all 0.3s;
-    }
-    &.active {
-      .question-item__title {
-        &::before {
-          transform: rotate(-90deg);
-        }
-      }
-  
-    }
-    &:last-child {
-      border-bottom: none;
-    }
-  }
-  
-  .mat-expansion-panel-header{
-    font-family: "Source Sans Pro", sans-serif;
-  }
-  .mat-expansion-panel-header-title{
+.question-item {
+  width: 100%;
+  border-bottom: 1px solid #EBEEFF;
+  background-color: #fff;
+  &__title {
+    position: relative;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 24px;
     color: #4E5051;
-  }
-  .mat-expansion-panel-spacing{
     margin: 0;
+    cursor: pointer;
+    padding: 27px 55px 27px;
     .element-plus{
-      &::before{
-        transform: translate(-50%, -50%) rotate(0deg);
+      color: #3a4046;
+      position: absolute;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
+      width: 25px;
+      height: 25px;
+      cursor: pointer;
+      &::after {
+        content: "";
+        width: 20px;
+        height: 4px;
+        background-color: #3a4046;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 50%;
+        position: absolute;
+      }
+      &::before {
+        content: "";
+        width: 20px;
+        height: 4px;
+        background-color: #3a4046;
+        transform: translate(-50%, -50%) rotate(90deg);
+        top: 50%;
+        left: 50%;
+        position: absolute;
+        transition: all .2s;
       }
     }
   }
-  .mat-expansion-panel{
-    box-shadow: none!important;
-  }
-  .mat-expansion-panel-content{
+  &__text {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 30px;
+    color: #4E5051;
+    margin: 0;
     font-family: "Source Sans Pro", sans-serif;
+    // padding: 0 100px 0 20px;
+    overflow: hidden;
+    // transition: all 0.3s;
+    padding: 0 32px 10px;
   }
-  .mat-expansion-indicator{
-    display: none;
-    &::after{
-      display: none;
+  &.active {
+    .question-item__title {
+      &::before {
+        transform: rotate(-90deg);
+      }
+    }
+
+  }
+  &:last-child {
+    border-bottom: none;
+  }
+}
+
+.mat-expansion-panel-header{
+  font-family: "Source Sans Pro", sans-serif;
+}
+.mat-expansion-panel-header-title{
+  color: #4E5051;
+}
+.mat-expansion-panel-spacing{
+  margin: 0;
+  .element-plus{
+    &::before{
+      transform: translate(-50%, -50%) rotate(0deg);
+      background-color: #005AED;
+    }
+    &::after{                                               
+      background-color: #005AED;
     }
   }
-  .mat-expansion-indicator::after{
-    display: none!important;
+}
+.mat-expansion-panel{
+  box-shadow: none!important;
+  &:last-child{
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
   }
+}
+.mat-expansion-panel-content{
+  font-family: "Source Sans Pro", sans-serif;
+}
+.mat-expansion-indicator{
+  display: none;
+  &::after{
+    display: none;
+  }
+}
+.mat-expansion-indicator::after{
+  display: none!important;
+}
