--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -24,5 +24,9 @@
 </section>
 
 <section class="question">
+    <div class="arrows">
+        <img class="arrow" src="assets/images/home-page/find-specialiset-line.svg" alt="">
+        <img class="arrow" src="assets/images/home-page/find-specialiset-line.svg" alt="">
+    </div>
     <app-home-page-questions></app-home-page-questions>
 </section>
