--- a/src/app/home-page/home-page-questions/home-page-questions.component.html
+++ b/src/app/home-page/home-page-questions/home-page-questions.component.html
@@ -8,19 +8,31 @@
                     Заказчикам / Фрилансерам</p>
                 <p>Не нашли ответ? Переходите на страницу Службы поддержки.</p>
             </div>
+            <a class="btn outline">Найти ответ</a>
         </div>
     </div>
     <div class="guestion-tabs">
+      <div class="tabs">
+        <div class="tabs-list">
+            <div class="tab" [ngClass]="{active: activeTab === 'customer'}" (click)="selectTab('customer')">Для заказчика</div>
+            <div class="tab" [ngClass]="{active: activeTab === 'freelancer'}" (click)="selectTab('freelancer')">Для фрилансера</div>
+        </div>
+        <div class="tabs-slider">
+            <div class="indicator" [ngClass]="{activeOne: activeTab === 'customer', activeTwo: activeTab === 'freelancer'}"></div>
+        </div>
+      </div>
+      <div class="question-wrap">
         <mat-accordion>
-            <mat-expansion-panel class="question-item" *ngFor="let question of questions;" hideToggle>
-              <mat-expansion-panel-header class="question-item__title">
-                <mat-panel-title >
-                  {{question.title}}
-                  <div class="element-plus"></div>
-                </mat-panel-title>
-              </mat-expansion-panel-header>
-              <p class="question-item__text">{{question.text}}</p>
-            </mat-expansion-panel>
-          </mat-accordion>
+          <mat-expansion-panel class="question-item" *ngFor="let question of questions[activeTab];" hideToggle>
+            <mat-expansion-panel-header class="question-item__title" [collapsedHeight]="customCollapsedHeight">
+              <mat-panel-title >
+                {{question.title}}
+                <div class="element-plus"></div>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <p class="question-item__text">{{question.text}}</p>
+          </mat-expansion-panel>
+      </mat-accordion>
+      </div>
     </div>
 </div>
