--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -2,7 +2,7 @@ h1 {
   text-align: center;
 }
 
-::ng-deep {
+section::ng-deep {
   div{
     font-family: "Source Sans Pro", sans-serif;
     font-style: normal;
@@ -15,7 +15,7 @@ h1 {
   .section__subtitle{
     font-weight: 600;
     font-size: 16px;
-line-height: 20px;
+    line-height: 20px;
     letter-spacing: 0.5px;
     text-transform: uppercase;
     color: #36B37E;
@@ -28,10 +28,29 @@ line-height: 20px;
     margin: 0 0 55px;
     color: #323C47;
   }
+  .btn{
+    &.outline{
+      border: 1px solid #4285f4;
+      background: #fff;
+      color: #4285f4;
+      box-shadow: none;
+      
+      &:hover{
+        color: #5695FD;
+        background: #fff;
+        border: 1px solid #5695FD;
+        box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+      }
+      &:active{
+        color: #1666EA;
+        border: 1px solid #1666EA;
+      }
+    }
+  }
 }
+
 .search{
   background-color: #F6FAFF;
-
   width: 100%;
   height: 810px;
   position: relative;
@@ -113,3 +132,42 @@ line-height: 20px;
   }
 }
 
+.question{
+  position: relative;
+  padding-top: 150px;
+  .arrows{
+    position: absolute;
+    width: 100%;
+    height: 390px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    overflow: hidden;
+    .arrow{
+      position: absolute;
+      width: 100%;
+      &:first-child{
+        transform: rotate(180deg)
+      }
+      &:last-child{
+        transform: rotate(6deg);
+      }
+    }
+  }
+  &::before{
+      content: "";
+      position: absolute;
+      z-index: -1;
+      top: 55%;
+      left: 43%;
+      width: 115%;
+      height: 115%;
+      max-width: 580px;
+      max-height: 580px;
+      background: linear-gradient(37.4deg, #F0F7FF 13.12%, #FFFFFF 89.5%);
+      box-shadow: 0px 0px 40px rgba(128, 152, 213, 0.2);
+      border-radius: 97px;
+      transform: translate(-50%, -50%) rotate(29.35deg);;
+  }
+}
