home-page -mobile-block + pravki

--- a/src/app/home-page/home-page-questions/home-page-questions.component.html
+++ b/src/app/home-page/home-page-questions/home-page-questions.component.html
@@ -6,7 +6,7 @@
             <div class="main-info__text">
                 <p>Выберите необходимую категорию: 
                     Заказчикам / Фрилансерам</p>
-                <p>Не нашли ответ? Переходите на страницу Службы поддержки.</p>
+                <p>Не нашли ответ? Переходите на страницу Вопросы и Ответы.</p>
             </div>
             <a class="btn outline">Найти ответ</a>
         </div>
