--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -30,3 +30,6 @@
     </div>
     <app-home-page-questions></app-home-page-questions>
 </section>
+<section class="app-news">
+    <app-home-page-app-news></app-home-page-app-news>
+</section>
