--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -110,7 +110,7 @@ section::ng-deep {
 }
 
 .find-specialist{
-  background-image: url(/assets/images/images/home-page/find-specialist-bg.svg);
+  background-image: url(/assets/images/home-page/find-specialist-bg.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -134,7 +134,8 @@ section::ng-deep {
 
 .question{
   position: relative;
-  padding-top: 150px;
+  padding-top: 200px;
+  overflow: hidden;
   .arrows{
     position: absolute;
     width: 100%;
@@ -159,15 +160,20 @@ section::ng-deep {
       content: "";
       position: absolute;
       z-index: -1;
-      top: 55%;
-      left: 43%;
-      width: 115%;
-      height: 115%;
-      max-width: 580px;
-      max-height: 580px;
-      background: linear-gradient(37.4deg, #F0F7FF 13.12%, #FFFFFF 89.5%);
-      box-shadow: 0px 0px 40px rgba(128, 152, 213, 0.2);
+      top: 50%;
+      left: 73%;
+      width: 100%;
+      height: 100%;
+      max-width: 700px;
+      max-height: 700px;
+      background: #F6FAFF;
       border-radius: 97px;
-      transform: translate(-50%, -50%) rotate(29.35deg);;
+      transform: translate(-50%, -50%) rotate(29.35deg);
   }
+}
+
+.app-news{
+  background: #3C7DEA;
+  padding: 90px 0 100px;
+  // overflow: hidden;
 }
